syntax = "proto3";

package io.github.vinicreis.dht.core.service;

import "io/github/vinicreis/dht/core/service/model/request/get_request.proto";
import "io/github/vinicreis/dht/core/service/model/request/join_request.proto";
import "io/github/vinicreis/dht/core/service/model/request/join_ok_request.proto";
import "io/github/vinicreis/dht/core/service/model/request/leave_request.proto";
import "io/github/vinicreis/dht/core/service/model/request/new_node_request.proto";
import "io/github/vinicreis/dht/core/service/model/request/node_gone_request.proto";
import "io/github/vinicreis/dht/core/service/model/request/set_request.proto";
import "io/github/vinicreis/dht/core/service/model/request/transfer_request.proto";
import "io/github/vinicreis/dht/core/service/model/response/get_response.proto";
import "io/github/vinicreis/dht/core/service/model/response/join_response.proto";
import "io/github/vinicreis/dht/core/service/model/response/join_ok_response.proto";
import "io/github/vinicreis/dht/core/service/model/response/leave_response.proto";
import "io/github/vinicreis/dht/core/service/model/response/new_node_response.proto";
import "io/github/vinicreis/dht/core/service/model/response/node_gone_response.proto";
import "io/github/vinicreis/dht/core/service/model/response/set_response.proto";
import "io/github/vinicreis/dht/core/service/model/response/transfer_response.proto";

service DHTService {
  rpc join(io.github.vinicreis.dht.core.model.request.JoinRequest) returns (io.github.vinicreis.dht.core.model.response.JoinResponse) { }
  rpc joinOk(io.github.vinicreis.dht.core.model.request.JoinOkRequest) returns (io.github.vinicreis.dht.core.model.response.JoinOkResponse) { }
  rpc newNode(io.github.vinicreis.dht.core.model.request.NewNodeRequest) returns (io.github.vinicreis.dht.core.model.response.NewNodeResponse) { }
  rpc nodeGone(io.github.vinicreis.dht.core.model.request.NodeGoneRequest) returns (io.github.vinicreis.dht.core.model.response.NodeGoneResponse) { }
  rpc leave(io.github.vinicreis.dht.core.model.request.LeaveRequest) returns (io.github.vinicreis.dht.core.model.response.LeaveResponse) { }
  rpc set(io.github.vinicreis.dht.core.model.request.SetRequest) returns (io.github.vinicreis.dht.core.model.response.SetResponse) { }
  rpc get(io.github.vinicreis.dht.core.model.request.GetRequest) returns (io.github.vinicreis.dht.core.model.response.GetResponse) { }
  rpc transfer(stream io.github.vinicreis.dht.core.model.request.TransferRequest) returns (io.github.vinicreis.dht.core.model.response.TransferResponse) { }
}
